crates/rattler_build_types/src/glob/snapshots/rattler_build_types__glob__glob_vec__tests__glob_checker_vec.snap
---
source: crates/rattler_build_types/src/glob/glob_vec.rs
expression: "&yaml"
---
exists:
- foo
- bar
not_exists:
- baz/**/qux
