crates/rattler_build_types/src/glob/snapshots/rattler_build_types__glob__glob_vec__tests__globvec_simple.snap
---
source: crates/rattler_build_types/src/glob/glob_vec.rs
expression: "&as_yaml"
---
- foo
- bar
- baz/**/qux
