crates/rattler_build_types/src/glob/snapshots/rattler_build_types__glob__glob_vec__tests__globvec_with_exclude.snap
---
source: crates/rattler_build_types/src/glob/glob_vec.rs
expression: "&as_yaml"
---
include:
- foo/
- bar
- baz/**/qux
exclude:
- foo/bar
- bar/*.txt
